replace arrays.asList by List.of